--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             </div>
             <div class="input--date--wrap">
               <div class="label--date--wrap-first">
-                <input type="text" onfocus="(this.type='date')" onblur="(this.type='text')"
+                <input type="text"
                        class="col--date col-md-12 col-lg-12 col-12" id="col--date-first" required/>
                 <label class="label--date--first" for="col--date-first">Check-in</label>
               </div>
               <div class="label--date--wrap-second">
-                <input type="text" onfocus="(this.type='date')" onblur="(this.type='text')"
+                <input type="text"
                        class="col--date col-md-12 col-lg-12 col-12" id="col--date" required/>
                 <label class="label--date--second" for="col--date">Check-out</label>
               </div>
